# r4-platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  build.gradle.kts  compose.production.yml  docker-compose.yml  settings.gradle.kts
.github/workflows/: docker-hub.yml  linux-agent.yml
agent-linux/: README.md  build.gradle.kts  install.sh
agent-linux/deploy/: r4-agent.env.example  r4-agent.service
agent-linux/src/main/kotlin/com/rarmash/r4/agent/linux/: R4LinuxAgent.kt
docs/: deployment.md
firmware/r4-controller-fw/: CMakeLists.txt  README.md  r4-controller-fw.c  rgb_led.c  rgb_led.h  tusb_config.h  usb_descriptors.c  version.h.in  ws2812.pio
gradle/wrapper/: gradle-wrapper.properties
hub/: Dockerfile  build.gradle.kts
hub/src/main/kotlin/com/rarmash/r4/hub/: R4HubApplication.kt
hub/src/main/kotlin/com/rarmash/r4/hub/command/: CommandController.kt  CommandRepository.kt  CommandService.kt  InMemoryCommandRepository.kt  JdbcCommandRepository.kt
hub/src/main/resources/: application.yml
hub/src/main/resources/db/changelog/: db.changelog-master.yaml
hub/src/main/resources/db/changelog/changes/: 001-initial-schema.sql  002-command-leases.sql
hub/src/test/kotlin/com/rarmash/r4/hub/: R4HubApplicationTest.kt
integration/batocera/: README.md  firmware-version.conf  install.sh
integration/batocera/emulationstation/achievements/: R4Achievement
integration/batocera/scripts/: R4GameState
integration/batocera/services/: R4Controller
protocol/: build.gradle.kts
simulator/: Dockerfile  build.gradle.kts
simulator/src/main/kotlin/com/rarmash/r4/simulator/: AgentIdentityProvider.kt  R4SimulatorApplication.kt  SimulatorAgent.kt  SimulatorConfiguration.kt
simulator/src/main/resources/: application.yml
simulator/src/test/kotlin/com/rarmash/r4/simulator/: AgentIdentityProviderTest.kt
tools/: r4-ecctl
(+38 files in other folders)
